# CPPCourseEGT

./: DeckOfCards.cpp  DeckOfCards.h  PlayingCard.cpp  PlayingCard.h  README.md  Task.h  main.cpp
8-PuzzleGame/: Buttons.cpp  Buttons.h  First_Window.sln  Game.cpp  Game.h  LogicPuzzle.cpp  LogicPuzzle.h  SoundManager.cpp  SoundManager.h  Task.h  main.cpp
Book_homework/: Book.cpp  Book.h  Task.h  main.cpp
Box_homework/: Box.cpp  Box.h  Task.h  main.cpp
Cars/: main.cpp
Cars_Ex/: CMakeLists.txt  main.cpp
CodingTasks_Classes_Homework/: Book.cpp  Book.h  CMakeLists.txt  main.cpp
CodingTasks_Inheritance_Homework/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Task.txt  main.cpp
CodingTasks_Polymorphism_Homework/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.h  Task.txt  main.cpp
Cpp-Chatbot/: CMakeLists.txt  bot.cpp  bot.h  main.cpp  question.cpp  question.h
Date_homework/: Date.cpp  Date.h  main.cpp
Employee_Management_System_homework/: Department.cpp  Department.h  Employee.cpp  Employee.h  Task.h  main.cpp
Even_Odd_homework/: Task.h  main.cpp
Library_Managment_System_homework/: Book.cpp  Book.h  Member.cpp  Member.h  Task.h  main.cpp
Matrix/: CMakeLists.txt  main.cpp
Online_Shop/: main.cpp
Questions_On_CPP_homework/: Questions_On_CPP_homework.h  Task.h
Rectangle/: Rectangle.cpp  Rectangle.h  Task.h  main.cpp
Rent_A_Car/: Task.h  main.cpp
RuffleShuffleHomework/: DeckOfCards.cpp  DeckOfCards.h  PlayingCard.cpp  PlayingCard.h  Task.h  main.cpp
Ruffle_Shuffle_Homework/: DeckOfCards.cpp  DeckOfCards.h  (+3 more)
(+46 files in other folders)
